--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 
     <title>Ejercicio 2 - Primitiva</title>
-    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+    <link rel="stylesheet" type="text/css" href="estilos.css">
 
 </head>
 
@@ -200,7 +200,7 @@
             <!-- Aquí colocar las tablas con el sorteo seleccionado y los premios adjudicados en dicho sorteo-->
         </fieldset>
     </section>
-    <script type="text/javascript" src="js/codigo - solucion.js"></script>
+    <script type="text/javascript" src="codigo - solucion.js"></script>
 </body>
 
 </html>
